# gpt

./: README.md  RUNBOOK_COLAB.md  pyproject.toml  setup.cfg
football_ml/: .env.example  API.md  README.md  __init__.py  config.py  requirements.txt
football_ml/api/: __init__.py  api_football.py  base_client.py  football_data_org.py
football_ml/data_sources/: football_data_org.py  free_api_live.py
football_ml/features/: __init__.py  builder.py  elo.py  form.py  odds.py
football_ml/pipeline/: build_features_and_train.py  merge_raw.py  predict_match.py  predict_upcoming.py
football_ml/prediction/: __init__.py  predict_match.py  predict_upcoming.py
football_ml/training/: __init__.py  dataset.py  evaluate.py  train_xgb.py
football_ml/tweet-delete-bot/: README.md  main.py
football_ml/tweet-delete-bot/bot/: announcer.py
football_ml/tweet-delete-bot/config/: settings.py
football_ml/tweet-delete-bot/core/: delete_detector.py  timeline_source.py  twitter_client.py
football_ml/tweet-delete-bot/scheduler/: poller.py
football_ml/tweet-delete-bot/storage/: state_store.py
football_ml/utils/: __init__.py  elo.py  features.py  io.py  logging.py
