[metadata]
name = football-ml
version = 0.1.0
description = Football match outcome modeling and prediction
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
    =.
python_requires = >=3.9
include_package_data = True
install_requires =
    pandas
    numpy
    requests
    scikit-learn
    xgboost
    joblib
    python-dotenv

[options.package_data]
* = *.txt, *.json
